--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title of the document</title>
+    <title>Microsoft AI Classroom Series</title>
   </head>
   <body>
     <iframe src="./MicrosoftCertificate.pdf" width="100%" height="900px">
